--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
@@ -32,12 +32,12 @@
 <div id="buttons">
   <div class="btn zoom"><p>+</p></div>
   <div class="btn zoom-out"><p>-</p></div>
-  <div class="btn zoom-init"><img src="{{ url('theme://images/fleche.png')|e }}"></div>
+  <div class="btn zoom-init"><img alt="" src="{{ url('theme://images/fleche.png')|e }}"></div>
 </div>
 
 
 
-<style type="text/css">
+<style>
 
 .entree-ascii{
   font-size:.5em;
