--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
@@ -93,10 +93,12 @@ h1{
   height: 3.5vh;
   width: 1.9vw;
   display: flex;
+  box-shadow: 5px 2.5px 5px rgba(255, 84, 0, 0.7);
   margin-top: 6px;
   text-align: center;
   transition: all 0.3s ease;
-  z-index: 1;
+  background-color: white;
+  z-index: 10;
   cursor: pointer;
   position: relative;
 }
